Bug 407317 - Search box continues to show a match even after Clear Scrollback (and Reset)
Summary: Search box continues to show a match even after Clear Scrollback (and Reset)
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-07 22:16 UTC by ultr
Modified: 2023-06-16 17:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ultr 2019-05-07 22:16:01 UTC
SUMMARY
Search box continues to show a match (green background) even after Clear Scrollback (and Reset)

STEPS TO REPRODUCE
1. Search history for existing string
2. "Clear Scrollback" (or "Clear Scrollback and Reset")

OBSERVED RESULT
Search box is still green indicating there is a result found in current (cleared) view.

EXPECTED RESULT
Search box should become red indicating no result.
(i.e. search should be re-run, and no result would be found)
Comment 1 Kurt Hindenburg 2021-03-25 04:14:16 UTC
Confirmed on current master.
Comment 2 Bug Janitor Service 2023-06-14 13:29:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/863
Comment 3 Kurt Hindenburg 2023-06-16 17:11:06 UTC
Git commit 09237ee02f0bf998061d092b9ce73dcfafaa795d by Kurt Hindenburg, on behalf of Theodore Wang.
Committed on 16/06/2023 at 17:10.
Pushed by hindenburg into branch 'master'.

Fixed search bar false positive after clear scrollback (and reset)

To prevent the search bar from continuing to show a match by emitting
green even after clearing scrollback and resetting, search is rerun
whenever the searchbar is opened.

M  +3    -1    src/session/SessionController.cpp

https://invent.kde.org/utilities/konsole/-/commit/09237ee02f0bf998061d092b9ce73dcfafaa795d