Fixed search bar false positive after clear scrollback (and reset)

To prevent the search bar from continuing to show a match by emitting
green even after clearing scrollback and resetting, search is rerun
whenever the searchbar is opened.

BUG: 407317